:shipit: :rotating_light: Changed to front end test

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="rankmi" ng-strict-di>
+<html lang="en" ng-app="app">
 <head>
     <base href="/">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body ng-cloak>
-<ui-view></ui-view>
+<body>
+    <div class="container-fluid">
+        <div class="col-12 col-md-4 offset-md-4">
+                <div class="card">
+                        <i class="fa fa-google fa-2x"></i>
+                    </div>
+        </div>
+    </div>
 </body>
 </html>
