Index empty from scratch

--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,8 @@
 <head>
     <base href="/">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Rankmi - Front end developer technical assessment</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="col-12 col-md-4 offset-md-4">
-                <div class="card">
-                        <i class="fa fa-google fa-2x"></i>
-                    </div>
-        </div>
-    </div>
 </body>
 </html>
